--- a/Multilabel classification.ipynb
+++ b/Multilabel classification.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# **running time = 55 min** Intel i5-2450M 2500MHz / 4096Mb Memory / AMD Radeon HD 7600M"
+    "**running time = 55 min** Intel i5-2450M 2500MHz / 4096Mb Memory / AMD Radeon HD 7600M"
    ]
   },
   {
